# ffmpeg-cpp

./: CMakeLists.txt  Readme.md
src/: load_frame.cpp  main.cpp
